[package]
name = "pm"
version = "0.1.0"
authors = ["CinematicCow <cinematiccow@gmail.com>"]
description = "pm is a simple project manager to help you better manage your side projects :)"
homepage = "https://github.com/CinematicCow/pm-rs"
license = "MIT"
repository = "https://github.com/CinematicCow/pm-rs.git"
readme = "README.md"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.9", features = ["derive"] }
fs_extra = "1.2.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
